--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.3.4",
     "axios": "^0.27.2",
+    "cookie-cutter": "^0.2.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
